search feature for activities. closes #47
